maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:33: error: not found: value ecritIndication
        case false => ecritIndication(x+1, y, xMax, yMax, cnt+1)
                      ^